--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <div class="container">
       <div id="quote-box" class="quote-box">
-        <p class="quote">Every great developer you know got there by solving problems they were unqualified to solve until they actually did it.</p>
-        <p class="source">Patrick McKenzie<span class="citation">Twitter</span><span class="year">2016</span></p>
+        <p class="quote">I hated school. They looked me in the eyes and told me the three states of matter were solids, liquids, and gases as if Jello doesn't even exist.</p>
+        <p class="source">Samuel L. Jackson<span class="citation">Clickhole Interview</span><span class="year">2014</span></p>
       </div>
     </div>
     
